--- a/client/public/index.html
+++ b/client/public/index.html
@@ -22,6 +22,7 @@
         <link href="https://fonts.googleapis.com/css?family=Calligraffitti&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Montez&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Bungee+Shade|Henny+Penny|Spirax&display=swap" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
